deployk8s/netflix-hystrix-noeureka.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: netflix-hystrix-pod
spec:
  replicas: 1
  template:
    metadata:
      name: netflix-hystrix-pod
      labels:
        run: netflix-hystrix-wfd
    spec:
      containers:
        - name: netflix-hystrix
          image: "registry.ng.bluemix.net/supercontainers/netflix-hystrix:dev"
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: supercontainers-secret
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-hystrix-service
spec:
  type: NodePort
  selector:
    run: netflix-hystrix-wfd
  ports:
   - protocol: TCP
     port: 8383
     nodePort: 30383
