deployk8s/netflix-turbine-paid2-noeureka.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: netflix-turbine-pod
spec:
  replicas: 1
  template:
    metadata:
      name: netflix-turbine-pod
      labels:
        run: netflix-turbine-wfd
    spec:
      containers:
        - name: netflix-turbine
          image: "registry.ng.bluemix.net/supercontainers/netflix-turbine:dev"
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: supercontainers-secret
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-turbine-service
spec:
  type: ClusterIP
  selector:
    run: netflix-turbine-wfd
  ports:
   - protocol: TCP
     port: 8989
