deployk8s/spring-config-noeureka.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-config-pod
spec:
  replicas: 3
  template:
    metadata:
      name: spring-config-pod
      labels:
        run: spring-config-wfd
    spec:
      containers:
        - name: spring-config
          image: "registry.ng.bluemix.net/supercontainers/spring-config:dev"
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: supercontainers-secret
---
apiVersion: v1
kind: Service
metadata:
  name: spring-config-service
spec:
  type: ClusterIP
  selector:
    run: spring-config-wfd
  ports:
   - protocol: TCP
     port: 8888
