deployk8s/wfd-appetizer-noeureka.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wfd-appetizer-pod
spec:
  replicas: 3
  template:
    metadata:
      name: wfd-appetizer-pod
      labels:
        run: wfd-appetizer-wfd
    spec:
      containers:
        - name: wfd-appetizer
          image: "registry.ng.bluemix.net/supercontainers/wfd-appetizer:dev"
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: supercontainers-secret
---
apiVersion: v1
kind: Service
metadata:
  name: appetizer-service
spec:
  type: ClusterIP
  selector:
    run: wfd-appetizer-wfd
  ports:
   - protocol: TCP
     port: 8082
