deployk8s/wfd-dessert-noeureka.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wfd-dessert-pod
spec:
  replicas: 3
  template:
    metadata:
      name: wfd-dessert-pod
      labels:
        run: wfd-dessert-wfd
    spec:
      containers:
        - name: wfd-dessert
          image: "registry.ng.bluemix.net/supercontainers/wfd-dessert:dev"
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: supercontainers-secret
---
apiVersion: v1
kind: Service
metadata:
  name: dessert-service
spec:
  type: ClusterIP
  selector:
    run: wfd-dessert-wfd
  ports:
   - protocol: TCP
     port: 8083
