deployk8s/wfd-entree-noeureka.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wfd-entree-pod
spec:
  replicas: 3
  template:
    metadata:
      name: wfd-entree-pod
      labels:
        run: wfd-entree-wfd
    spec:
      containers:
        - name: wfd-entree
          image: "registry.ng.bluemix.net/supercontainers/wfd-entree:dev"
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: supercontainers-secret
---
apiVersion: v1
kind: Service
metadata:
  name: entree-service
spec:
  type: ClusterIP
  selector:
    run: wfd-entree-wfd
  ports:
   - protocol: TCP
     port: 8081
