deployk8s/wfd-menu-paid2-dockerio-noribbon.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wfd-menu-pod
spec:
  replicas: 3
  template:
    metadata:
      name: wfd-menu-pod
      labels:
        run: wfd-menu-wfd
    spec:
      containers:
        - name: wfd-menu
          image: "docker.io/dbellagio/wfd-menu:k8s"
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: supercontainers-secret
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
spec:
  type: ClusterIP
  selector:
    run: wfd-menu-wfd
  ports:
   - protocol: TCP
     port: 8180
