deployk8s/wfd-ui-paid2-dockerio-noribbon.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wfd-ui-pod
spec:
  replicas: 3
  template:
    metadata:
      name: wfd-ui-pod
      labels:
        run: wfd-ui-wfd
    spec:
      containers:
        - name: wfd-ui
          image: "docker.io/dbellagio/wfd-ui-bff:k8s"
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: supercontainers-secret
---
apiVersion: v1
kind: Service
metadata:
  name: wfd-ui-service
spec:
  type: ClusterIP
  selector:
    run: wfd-ui-wfd
  ports:
   - protocol: TCP
     port: 8181
